Embeds, guild name, links, taskbar icon, animated pfp fix
Changed the way embeds work since there's 6 different types of embeds, the system is going to be completely re-designed because each of them have their own traits which are hard to do with the current system

Guild names now don't interfere with channels, basically the name stayed there and didn't let you click through it even tho it was invisible

Links links that don't end with / automatically get assigned / at the end

Fixed hidden links in embeds since they weren't working just right

Added the official logo to the taskbar (Most likely doesn't work for mac)

Animated profile pictures gave out an error when there was no picture because of the system I made but that's fixed now

--- a/css/embeds.css
+++ b/css/embeds.css
@@ -6,7 +6,7 @@
     border-left: 5px solid;
     color: white;
     min-height: 50px;
-    max-width: 400px;
+    max-width: 512px;
 }
 
 .messageTimestamp + .embed {
@@ -17,6 +17,18 @@
     height: 90px;
     border-radius: 5px;
     float: right;
+}
+
+.embedSmallIcon {
+    height: 40px;
+    border-radius: 5px;
+    float: right;
+}
+
+.embedArticleLargeIcon {
+    height: 212px;
+    padding: 15px 0px 0px;
+    border-radius: 5px;
 }
 
 /*Author*/
@@ -43,6 +55,8 @@
 /*Title section*/
 .embedTitle {
     margin: 0;
+    font-size: 17px;
+    font-weight: bold;
 }
 
 .embedDescription {
@@ -51,7 +65,12 @@
 
 .embedContent {
     color: #aaa;
-    font-size: 14px;
+    font-size: 15px;
+}
+
+.embedProvierName{
+    margin: 5px 0 5px 0;
+    font-size: 13px;
 }
 
 /*Fields*/
